--- a/src/index.css
+++ b/src/index.css
@@ -13,40 +13,55 @@ code {
 }
 
 .wrapper{
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
+  width: 1000px;
+  margin: 0 auto;
 }
-.form{
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-}
-.table{
-  padding: 15px;
-}
+
 table{
+  width: 100%;
+  border-radius: 12px;
   border-collapse: collapse;
+  overflow: hidden;
 }
 th{
   cursor: pointer;
   padding: 8px;
+  background-color: #dddddd;
+  text-align: center;
+  border: 1px solid #fff;
 }
 td{
   padding: 8px;
+  text-align: center;
+  background-color: #fafafa;
+  border: 1px solid #fff;
 }
-.formElement{
-  margin: 0 0 15px 0;
+.rel{
+  position: relative;
 }
-input[type='text']{
-  border: 1px solid #000; 
-   /* border-radius: 3px; 
-   -webkit-border-radius: 3px; 
-   -moz-border-radius: 3px;
-   -khtml-border-radius: 3px; 
-   background: #ffffff !important;
-   outline: none; 
-   height: 24px; 
-   width: 120px; 
-   font-size: 11px; 
-   font-family: Tahoma;  */
+tr:hover td .del{
+  background: red;
+  left: 0px;
+}
+.del{
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  color: #fff;
+  background-color: red;
+  transition: all 0.25s;
+  top: 10px;
+  left:-21px;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+}
+.invalid{
+  border-color: red;
+  box-shadow: 0px 0px 10px 2px red;
+}
+.error{
+  color: red;
 }
